manifest/my-application-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-application-svc
  namespace: default
spec:
  selector:
    app: my-application
  ports:
    - port: 80          # service port
      targetPort: 80  # containerPort in your deployment
  type: ClusterIP
