manifest/my-application-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-application-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: superstareducation.co.uk   
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: my-application-svc
                port:
                  number: 80
